# AncientProteinScripts

./: .gitignore  README.md  analysis_pipeline.py  mutations_simulation_10E.py  mutations_simulation_20F.py  pyproject.toml  redesign_20.py  run_design_pipeline.py
